Correcciones varias y listar de post, tag, comment